# xaivision-autoblock

./: .env.example  .gitignore  Dockerfile  README.md  data-train.yaml  main.py  main.py.works  pyproject.toml
raw_dataset/airplane.v2i.yolo26/: README.dataset.txt  README.roboflow.txt  data.yaml
raw_dataset/airplane.v2i.yolo26/test/labels/: 4_190_jpg.rf.c0d0f4fb990edb3ce1bac01a0af1d0e0.txt  4_291_jpg.rf.b762f8047f6c162a0f0b180a3cb126da.txt  4_358_jpg.rf.006000021be32aa1bc306a06a7b73776.txt  4_374_jpg.rf.835bc682f574f3116f3cdd9b282840a9.txt  4_382_jpg.rf.065849e21344ef69f9478af37a7d0909.txt  4_396_jpg.rf.930a5818da22c0bdf52aef575b371988.txt  4_406_jpg.rf.bf190cd2b21dc309e420abc3071f49b4.txt  4_407_jpg.rf.731cb2ff9ebc383306b2895e7c1ff923.txt  4_422_jpg.rf.624b285ef0337f98da9be913d39fa852.txt  4_432_jpg.rf.cb676b14d4f5b8d5cf8d7700f08a2233.txt  4_441_jpg.rf.ee179002587191b16e36040f034bb95d.txt  4_445_jpg.rf.6b858b97903dfc42b46e507ee9f146ab.txt  4_475_jpg.rf.addcb5f43b5069f2889b1f107f733b94.txt  4_491_jpg.rf.876cadac41e5a12c9c3fb784806c211e.txt  4_4_jpg.rf.945c969216409b4d14f9d414a3b8d3bf.txt  4_505_jpg.rf.d82dedaea1c2f9f82c27550203e827d5.txt  4_546_jpg.rf.bca892658b1fc73d3475156f27303f8c.txt  4_557_jpg.rf.4fe59e61f41535ff307094839a8dc644.txt  4_568_jpg.rf.997e430095aaf79d9ad5ae033bad0ce3.txt  4_569_jpg.rf.d9f4ae8b30383a458b00c16c63cf0df9.txt  4_594_jpg.rf.5e76ca92cc3f2abe60ac6d812fbeec80.txt  4_615_jpg.rf.023fbc544763a4066b455cee53d82a00.txt  4_633_jpg.rf.3217c3301ae74a7536ade0397c033349.txt  4_643_jpg.rf.71dee67bad8c770ecb0bdb7bae35cc13.txt  4_665_jpg.rf.1e4f0729d2adc7f871454b0ad9ce12ce.txt  4_669_jpg.rf.2714b4af75c74da112fc336d3379f214.txt  4_689_jpg.rf.90f9d876d7002698a87ab930e1d57d7c.txt  4_697_jpg.rf.cf24701982307be8adb7323e3b72f0b3.txt  4_702_jpg.rf.32df91d4c74acdaaabe187ff26491e2a.txt  4_713_jpg.rf.0e61735964e3cc9c33d0fcb986cf05db.txt  4_715_jpg.rf.003e658bdaf2474f6de044f66f099a25.txt  4_716_jpg.rf.1ef05ef5e31874108c08ef98e83e3462.txt  (+17 more)
raw_dataset/airplane.v5i.yolo26/: README.dataset.txt  README.roboflow.txt  data.yaml
raw_dataset/dataset1/: notes.json
raw_dataset/dataset1/labels/: 005eaa56-_5.txt  01f0fac1-_7.txt  0491d02a-_5.txt  07703ca4-dua_25.txt  086e3430-_16.txt  0996cbe8-_1.txt  0a7a4993-_1.txt  0c8c8f41-dua_14.txt  113da18f-_4.txt  18d514e8-_15.txt  1aef802d-dua_7.txt  1bb2778f-dua_31.txt  1c113ba4-dua_6.txt  1dbfe41b-_14.txt  1f3e3c19-_25.txt  200032ec-_1.txt  20dfd99e-satu__12.txt  20e5cbdf-_4.txt  2193f445-_42.txt  21fd8c63-_26.txt  22235b4c-satu__4.txt  2586d3ac-_2.txt  27ecf2d4-satu__15.txt  2a63ec9c-_33.txt  2ad82263-_6.txt  2b631ed0-_6.txt  2b9b2158-dua_32.txt  2cca3768-dua_13.txt  2d858b60-satu__8.txt  2e62a1fd-dua_28.txt  2ea8c375-satu__17.txt  32cb3bc4-_21.txt  339e01e8-_19.txt  34dff340-_3.txt  34fd1022-_1.txt  37fe501c-_41.txt  3b1046bb-_18.txt  3cc6ee62-_4.txt  3d9ca2f3-_2.txt  3f74f13d-_18.txt  (+122 more)
xaivision_autoblock/: autoblock.py  capturer.py  prepare_dataset.py  tapping.py  utils.py
(+828 files in other folders)
