[project]
name = "xaivision-autoblock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "niquests>=3.20.1",
    "python-dotenv>=1.2.2",
    "robyn>=0.88.0",
    "shapely>=2.1.2",
    "ultralytics>=8.4.95",
    "torch",
    "torchvision",
    "torchaudio",
    "lap>=0.5.13",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xaivision_autoblock*"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[dependency-groups]
dev = [
    "tensorboard>=2.21.0",
]
