[project]
name = "xaivision-autoblock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "niquests>=3.20.1",
    "python-dotenv>=1.2.2",
    "robyn>=0.88.0",
    "shapely>=2.1.2",
    "ultralytics>=8.4.95",
    "torch>=2.12.0",        # Compatible with CUDA 13.2 binaries
    "torchvision>=0.27.0",   # Matches PyTorch 2.12+
    "torchaudio",
    "lap>=0.5.13",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xaivision_autoblock*"]

[tool.uv]
# Lock the index URL directly to PyTorch's official CUDA 13.2 binary wheel store
extra-index-url = ["https://download.pytorch.org/whl/cu132"]

[dependency-groups]
dev = [
    "tensorboard>=2.21.0",
]
